# workshops

./: .gitignore  CONTRIBUTING.md  README.md  home.md  myst.yml  pyproject.toml  schedule.md
.github/workflows/: pages.yml
00-instructors/: 00_organizers.md  01_instructors.md
01-intro-napari/: 00_setup.md  01_napari_gui.md  02_intro_bioimage_viz.md  index.md
binder/: environment.yml
docs/: events.md  home.md  launching_binder.md  myst.yml  schedule.md
docs/00-instructors/: 00_organizers.md  01_instructors.md  instructors.md  organizers.md
docs/01-intro-napari/: 00_setup.md  03_manual_annotation.md  04_interactive_analysis.md  05_using_plugins.md  block1_welcome.md  block2_gui.md  block3_plugins_and_annotation.md  block4_analysis_wrap_up.md  index.md  session_schedule.md  setup.md
docs/01-intro-napari/scripts/: annotation.py
docs/02-extend-napari/: 02_spot_detection_exploratory.md  03_functions_to_widgets.md  04_mouse_callbacks_events.md  05_custom_colormaps.md  index.md
docs/03-develop-napari-plugins/: index.md  make_a_simple_plugin.md
docs/resources/: _custom.css
docs/scripts/: copy_theme_css.py  seed_napari_geometry.py
shared/: cloud_setup.md  installation.md  notebook_setup.md
