[project]
name = "napari-workshops"
version = "0.1.0"
description = "Hands-on napari training workshops"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
    { name = "napari team", email = "info@napari.org" }
]
requires-python = ">=3.12"
dependencies = [
    "napari[all]>=0.7.0",
    "matplotlib",
]

[dependency-groups]
dev = [
    "mystmd",
    "jupyter-book>=2",
    "jupyterlab",
    "jupyterlab-myst",
    "jupytext",
    "napari-sphinx-theme",
]

[tool.uv]
package = false

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64", "osx-64"]

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]
copy-css = "python docs/_scripts/copy_theme_css.py"
# Seed napari's saved window geometry to 1280x720 before any notebook runs.
# napari restores QSettings on startup, so this once gives all kernels a
# consistent default size without any per-notebook code.
seed-geometry = "python docs/_scripts/seed_napari_geometry.py"
# Build the full site (executes notebooks — requires a display server on Linux)
build = { cmd = "cd docs && jupyter-book build --html --execute --strict", depends-on = ["copy-css", "seed-geometry"] }
# Live-preview server for local development
start = { cmd = "cd docs && jupyter-book start --execute .", depends-on = ["copy-css", "seed-geometry"] }
# Remove build artifacts
clean = { cmd = "cd docs && jupyter-book clean" }
